[package]
name = "geotag"
authors = ["kamataryo(https://github.com/kamataryo)"]
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
glob = "0.3.2"
gpx = "=0.10.0"
little_exif = "0.6.3"
